{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 6,
  "lineage": "f6e55b83-a2f7-241d-e97e-8f18e384a3cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-ec2-04-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00c3234f8c9360a4a",
            "arn": "arn:aws:ec2:us-east-1:058264261029:instance/i-0096f003aa62e4bc4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0096f003aa62e4bc4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a4b6df1d9efe334f",
            "private_dns": "ip-172-31-12-135.ec2.internal",
            "private_ip": "172.31.12.135",
            "public_dns": "ec2-44-223-101-19.compute-1.amazonaws.com",
            "public_ip": "44.223.101.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05311245c3e9caaf9",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default-vpc-ssh",
              "default-vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc3510621695a21b",
            "tags": {
              "Name": "EC2 Demo 2"
            },
            "tags_all": {
              "Name": "EC2 Demo 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0636e6f588dd2394b",
              "sg-067348b0ad27108e7"
            ]
          },
          "dependencies": [
            "aws_security_group.default-vpc-ssh",
            "aws_security_group.default-vpc-web",
            "data.aws_ami.terraform-ec2-04-aws_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default-vpc-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:security-group/sg-0636e6f588dd2394b",
            "description": "Dev VPC SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0636e6f588dd2394b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-vpc-ssh",
            "name_prefix": "",
            "owner_id": "058264261029",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0683ac964348515a3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default-vpc-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:security-group/sg-067348b0ad27108e7",
            "description": "Dev VPC web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067348b0ad27108e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-vpc-web",
            "name_prefix": "",
            "owner_id": "058264261029",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0683ac964348515a3"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}